--- a/stilo/estilo.css
+++ b/stilo/estilo.css
@@ -69,7 +69,7 @@ header > h1 {
     font-family: var(--fonte-destaque);
     font-size: 3em ;
     font-weight: normal;  /* Lembra sempre em deixa em negrito */
-    padding-bottom: 20px;/* espaço  de baixo do h1 e paragrafo de P*/
+    margin-bottom: 20px;/* espaço  de baixo do h1 e paragrafo de P*/
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.664);/* Sombra no TExto do  H1*/
   
     
@@ -112,7 +112,7 @@ header > p{
     max-width: 600px;/* Para quando eu diminuir a tela o que esta escrito dentro paragrafo , fica centralizado do mesmo tamanho do texto que escrito no  H1  */
     padding-right: 10px;
     padding-left: 10px;
-    padding-bottom: 20px;
+    padding-bottom: 50px;
     margin: auto; /* Tenho que usa para centraliza quando uso comando de cima */
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.315);/* Sombra no TExto do PARAGRAFO*/
 
